# smartresizeimage

./: .gitignore  App.tsx  README.md  app_pro_max.py  docker-compose.yml  index.html  install_pro_max.bat  metadata.json  package.json  pyvenv.cfg  requirements_light.txt  run_pro_max.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  constants.py  enums.py  exceptions.py  logging_config.py  main.py  models.py  relayout.py  validators.py
backend/app/classifier/: __init__.py  semantic_classifier.py
backend/app/composition/: __init__.py  background.py  content_aware_fit.py  engine.py  resize.py
backend/app/layout/: __init__.py  engine.py  templates.py
backend/app/parser/: __init__.py  base_parser.py  image_parser.py  psd_parser.py
backend/tests/: conftest.py  test_classifier.py  test_composition.py  test_content_aware_fit.py  test_layout.py  test_parser.py  test_relayout.py  test_validators.py
components/: ApiKeyModal.tsx  ResultCard.tsx
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: Uploader.tsx
frontend/src/services/: localProcessingService.ts  segmentationCache.ts
frontend/src/utils/: imageUtils.ts  validation.ts
services/: geminiService.ts  localProcessingService.ts
